--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,20 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@todo-app/todo-app/data-access": [
+        "libs/todo-app/data-access/src/index.ts"
+      ],
+      "@todo-app/todo-app/feature-details": [
+        "libs/todo-app/feature-details/src/index.ts"
+      ],
+      "@todo-app/todo-app/feature-list": [
+        "libs/todo-app/feature-list/src/index.ts"
+      ],
+      "@todo-app/todo-app/feature-shell": [
+        "libs/todo-app/feature-shell/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
