--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@todo-app/app-config": ["libs/app-config/index.ts"],
+      "@todo-app/todo-app/core": ["libs/todo-app/core/src/index.ts"],
       "@todo-app/todo-app/data-access": [
         "libs/todo-app/data-access/src/index.ts"
       ],
@@ -27,8 +29,7 @@
       "@todo-app/todo-app/feature-shell": [
         "libs/todo-app/feature-shell/src/index.ts"
       ],
-      "@todo-app/todo-app/ui-list": ["libs/todo-app/ui-list/src/index.ts"],
-      "@todo-app/app-config": ["libs/app-config/index.ts"]
+      "@todo-app/todo-app/ui-list": ["libs/todo-app/ui-list/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
