--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
-    "@ngrx/component-store": "~12.5.0",
-    "@ngrx/effects": "~12.5.0",
-    "@ngrx/entity": "~12.5.0",
-    "@ngrx/router-store": "~12.5.0",
-    "@ngrx/store": "~12.5.0",
+    "@ngrx/component-store": "^13.0.1",
+    "@ngrx/effects": "^13.0.1",
+    "@ngrx/entity": "^13.0.1",
+    "@ngrx/router-store": "^13.0.1",
+    "@ngrx/store": "^13.0.1",
     "@nrwl/angular": "13.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
